--- a/best.html
+++ b/best.html
@@ -3,10 +3,15 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<link href="css/lightbox.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
 <title>Best</title>
 </head>
 
@@ -23,9 +28,36 @@
 	</div>
 
 <div class ="content" id="content">
-<p> This page will be dedicated to the best types of cookies as voted on by my friends.</p>
+<p> The best types of cookies as voted on by my friends.</p>
 
-<div class="flex-container">
+      <div class= "container2">
+        <a href= "images/tagalongs.jpg" data-lightbox= "images" data-title= "tagalongs" data-alt= "tagalongs"><img src= "images/tagalongs.jpg" alt= "tagalongs"></a>
+
+        <a href= "images/chewy_chips_ahoy.jpg" data-lightbox= "images" data-title= "Chewy Chips Ahot" data-alt= "Chew Chips Ahoy"><img src= "images/chewy_chips_ahoy.jpg" alt= "Chewy Chips Ahoy"></a>
+
+        <a href= "images/reg_oreo.jpg" data-lightbox= "images" data-title= "Oreos" data-alt= "Oreos"><img src= "images/reg_oreo.jpg" alt= "Oreos"></a>
+
+        <a href= "images/frosted_cookies.jpg" data-lightbox= "images" data-title= "Frosted Cookies" data-alt= "5p"><img src= "images/frosted_cookies.jpg" alt= "Frosted Cookies"></a>
+
+        <a href= "images/thin_mints.jpg" data-lightbox= "images" data-title= "Thin Mints" data-alt= "Thin.Mints"><img src= "images/thin_mints.jpg" alt= "Frsoted Cookies"></a>
+
+        <a href= "images/double_stuff_oreos.jpg" data-lightbox= "images" data-title= "Double Stuffed Oreos" data-alt= "Double Stuffed Oreos"><img src= "images/double_stuff_oreos.jpg" alt= "cali_customized"></a>
+
+        <a href= "images/chips_ahoy.jpg" data-lightbox= "images" data-title= "Chips Ahoy" data-alt= "1p"><img src= "images/chips_ahoy.jpg" alt= "Chips Ahoy"></a>
+
+        <a href= "images/nutter_butter.jpg" data-lightbox= "images" data-title= "nutter_butter" data-alt= "Nutter Butter"><img src= "images/nutter_butter.jpg" alt= "Nutter Butter"></a>
+
+       <a href= "images/milanos.jpg" data-lightbox= "images" data-title= "Milanos" data-alt= "Milanos"><img src= "images/milanos.jpg" alt= "Milanos"></a>
+      </div>
+    </main>
+    <br>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <script src="https://unpkg.com/muuri@0.6.3/dist/muuri.min.js"></script>
+    <script src="js/lightbox.js"></script>
+
+
+<!-- <div class="flex-container">
 	<img src="images/tagalongs.jpg" alt="tagalongs">
 	<img src="images/chewy_chips_ahoy.jpg" alt="chewy chips ahoy">
 	<img src="images/reg_oreo.jpg" alt="Oreos">
@@ -35,9 +67,9 @@
 	<img src="images/chips_ahoy.jpg" alt="Chips a hoy">
 	<img src="images/nutter_butter.jpg" alt="Nutter Butter">
 	<img src="images/milanos.jpg" alt="Milanos">
-</div>
+</div> -->
 
-<div>
+<!-- <div>
 	<p> here are some comments from my friends on what makes a high quality cookie:
 		<blockquote> chewy and peanut buttery</blockquote>
 		<blockquote>the taste</blockquote>
@@ -49,7 +81,7 @@
 		<blockquote>love</blockquote>
 		<blockquote>Honest vegan ingredients, good people, and a lot of love</blockquote>
 		<blockquote>Soft falls apart in your mouth not drying your mouth out and a tone of flavor</blockquote>
-		<blockquote>Soft and chewy</blockquote>
+		<blockquote>Soft and chewy</blockquote> -->
 		<!-- The flavor and texture
 		chewy n warm
 		Softness, quality ingredients, warm, no mint, served with milk, decent size that eating more than 1 or 2 doesn't make you feel guilty
